# py-sdg-eda-workshop

./: .gitignore  README.md  _quarto.yml  presentation-flow.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
data/curated/: manifest_20260315T070236Z.csv  manifest_20260315T085520Z.csv  manifest_20260315T201038Z.csv  worldbank_indicators_20260315T070236Z.parquet  worldbank_indicators_20260315T085520Z.csv  worldbank_indicators_20260315T201038Z.csv  worldbank_indicators_20260315T201038Z.parquet
data/raw/: china__air_passengers.csv  china__education_expenditure.csv  china__education_secondary.csv  china__gdp_per_capita.csv  china__gini_index.csv  china__hospital_beds.csv  china__internet_users_pct.csv  china__life_expectancy.csv  china__population_total.csv  china__poverty_headcount.csv  india__air_passengers.csv  india__education_expenditure.csv  india__education_secondary.csv  india__gdp_per_capita.csv  india__gini_index.csv  india__hospital_beds.csv  india__internet_users_pct.csv  india__life_expectancy.csv  india__population_total.csv  india__poverty_headcount.csv  indonesia__air_passengers.csv  indonesia__education_expenditure.csv  indonesia__education_secondary.csv  indonesia__gdp_per_capita.csv  indonesia__gini_index.csv  indonesia__hospital_beds.csv  indonesia__internet_users_pct.csv  indonesia__life_expectancy.csv  indonesia__population_total.csv  indonesia__poverty_headcount.csv  japan__air_passengers.csv  japan__education_expenditure.csv  (+64 more)
docs/: index.html  search.json
src/: config.py  extract.py  pipeline.py  transform.py
(+1 files in other folders)
